[gd_scene load_steps=39 format=3 uid="uid://2bp87shqnigy"]

[ext_resource type="Script" path="res://scenes/level_map_manager.gd" id="1_6uwso"]
[ext_resource type="PackedScene" uid="uid://duhm48nuq1ni3" path="res://scenes/lvl_button.tscn" id="1_7bab2"]
[ext_resource type="FontFile" uid="uid://dvwmengwruy7d" path="res://assets/recharge bd.otf" id="1_k6vei"]
[ext_resource type="Texture2D" uid="uid://dh3m8hwp7e5e3" path="res://assets/map bg.jpg" id="1_lrbyu"]
[ext_resource type="Resource" uid="uid://pgwsd3ka05am" path="res://levels/lvl2.tres" id="6_382rl"]
[ext_resource type="Resource" uid="uid://01dul27pjlqe" path="res://levels/lvl1.tres" id="6_m0bv4"]
[ext_resource type="Resource" uid="uid://c5f7g5go738l5" path="res://levels/lvl3.tres" id="7_ctgmg"]
[ext_resource type="Resource" uid="uid://c04kqypyip7p2" path="res://levels/lvl4.tres" id="8_w5g2m"]
[ext_resource type="Resource" uid="uid://bfvir08egrby8" path="res://levels/lvl5.tres" id="9_cv6tf"]
[ext_resource type="Resource" uid="uid://bhp4v4kt525fn" path="res://levels/quiz_1.tres" id="10_8dvvn"]
[ext_resource type="Resource" uid="uid://cpgkp1o7wkhgk" path="res://levels/lvl6.tres" id="11_c1xo7"]
[ext_resource type="Resource" uid="uid://5m0324jorc6i" path="res://levels/lvl7.tres" id="12_rjv15"]
[ext_resource type="Resource" uid="uid://cr20coumtvolj" path="res://levels/lvl8.tres" id="13_iarii"]
[ext_resource type="Resource" uid="uid://duoby4d4mwms1" path="res://levels/lvl9.tres" id="14_7hl0h"]
[ext_resource type="Resource" uid="uid://4esh1we5fbam" path="res://levels/lvl10.tres" id="15_f4usa"]
[ext_resource type="Texture2D" uid="uid://dmyqryuowmn5y" path="res://assets/ui_pack/check.png" id="16_54i8j"]
[ext_resource type="Resource" uid="uid://c2aiikxteko6c" path="res://levels/quiz_2.tres" id="16_hcrs4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2g7d"]
bg_color = Color(0.319856, 0.452785, 0.159953, 1)
border_width_bottom = 10
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcj4l"]
bg_color = Color(0.503644, 0.455142, 0.149931, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20
shadow_color = Color(0.530029, 0.912455, 0.287633, 0.52549)
shadow_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_mwkfy"]
font_size = 30
font_color = Color(0.799642, 0.873431, 0.44295, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2f70u"]
font_size = 22

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j4ee4"]
bg_color = Color(0.501961, 0.847059, 0.32549, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.262745, 0.184314, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_30mif"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.262507, 0.184209, 0.201841, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x406s"]
bg_color = Color(0.176471, 0.176471, 0.176471, 0.858824)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 20

[sub_resource type="LabelSettings" id="LabelSettings_ar8ft"]
line_spacing = 0.0
font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kj75t"]
bg_color = Color(0.672623, 0.598891, 0.311696, 1)
border_width_left = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_0hrcb"]
line_spacing = -4.71
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_f1x4p"]
line_spacing = -4.71
font_size = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xybiv"]
bg_color = Color(0.324005, 0.29187, 0.0823383, 0.843)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14ui8"]
bg_color = Color(0.635294, 0.545098, 0.380392, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20
shadow_size = 5

[sub_resource type="Shader" id="Shader_n213j"]
code = "shader_type canvas_item;

uniform float value : hint_range(0.0, 1.0) = 1.0;
uniform int segments = 1;
uniform float radius = 0.475;
uniform float hollow_radius = 0.0;
uniform float margin : hint_range(0.0, 1.0) = 0.0;
uniform float rotation : hint_range(-1.0, 1.0);
uniform float progress_rotation : hint_range(-1.0, 1.0);
uniform sampler2D gradient : source_color;
uniform bool use_value_gradient = false;
uniform sampler2D radius_curve;


vec4 get_gradient_color(sampler2D src, float position) {
	position = clamp(position, 0.01, 0.99); // Color at 0.0 and 1.0 get interpolated by both end
    return texture(src, vec2(position, 0.5));
}

float map_range(float min1, float max1, float min2, float max2, float v) {
	float p = (v - min1) / (max1 - min1);
	return p * (max2 - min2) + min2;
}

vec2 rotate_uv(vec2 uv, float p_rotation){
    float mid = 0.5;
    return vec2(
        cos(p_rotation) * (uv.x - mid) + sin(p_rotation) * (uv.y - mid) + mid,
        cos(p_rotation) * (uv.y - mid) - sin(p_rotation) * (uv.x - mid) + mid
    );
}

float circle_shape(vec2 uv, float p_radius) {
	vec2 center = vec2(0.5, 0.5);
	return 1.0 - step(p_radius, distance(center, uv));
}

float radial_shape(vec2 uv, int p_segments) {
	float radial = 0.0;
	uv -= 0.5;
	radial = atan(uv.y, uv.x);
	radial = map_range(-PI, PI, 0.0, float(p_segments), radial);
	radial = mod(radial, 1.0);
	
	return radial;
}

void fragment() {
	vec2 uv = UV;
	uv = rotate_uv(uv, PI/2.0); // Rotate 90 degrees, so origin pointing at north be default
	uv = rotate_uv(uv, rotation * PI);
	
	float t = radial_shape(uv, 1);
	if (use_value_gradient) {
		t = value;
	}
	float radius_t = get_gradient_color(radius_curve, radial_shape(uv, 1)).r;
	
	float shape = radial_shape(uv, segments);
	float border_size = (1.0-margin)/2.0;
	shape *= step(border_size, shape);
	shape *= step(shape, 1.0 - border_size);
	shape = step(shape, 0.0);
	
	uv = rotate_uv(uv, progress_rotation * PI);
	float arc = radial_shape(uv, 1);
	arc = step(arc, value);
	
	float bounds = circle_shape(uv, radius * radius_t);
	float hollow = 1.0-circle_shape(uv, hollow_radius * radius_t);
	
	shape = shape * arc * bounds * hollow;
	
	vec4 gradient_color = get_gradient_color(gradient, t);
	COLOR = vec4(gradient_color.rgb, shape);
}
"

[sub_resource type="Gradient" id="Gradient_w7cjt"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.6917, 1)
colors = PackedColorArray(0.804374, 0.835568, 0.0369259, 1, 1, 0.282353, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fkxqk"]
gradient = SubResource("Gradient_w7cjt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hvhmv"]
shader = SubResource("Shader_n213j")
shader_parameter/value = 0.929
shader_parameter/segments = 0
shader_parameter/radius = 0.455
shader_parameter/hollow_radius = 0.305
shader_parameter/margin = 0.0
shader_parameter/rotation = 4.75e-08
shader_parameter/progress_rotation = 4.75e-08
shader_parameter/use_value_gradient = true
shader_parameter/gradient = SubResource("GradientTexture1D_fkxqk")

[sub_resource type="LabelSettings" id="LabelSettings_2jtue"]
line_spacing = 0.0
font = ExtResource("1_k6vei")

[sub_resource type="LabelSettings" id="LabelSettings_54in2"]
line_spacing = -4.71
font = ExtResource("1_k6vei")
font_size = 15

[sub_resource type="LabelSettings" id="LabelSettings_waw1k"]
line_spacing = 0.0
font = ExtResource("1_k6vei")
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_42tr1"]
line_spacing = -4.71
font = ExtResource("1_k6vei")
font_size = 20

[node name="LevelSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6uwso")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lrbyu")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -243.0
offset_top = 47.0
offset_right = 243.0
offset_bottom = 128.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_k6vei")
theme_override_font_sizes/font_size = 64
text = "Select Level"

[node name="LvlButton1" parent="." instance=ExtResource("1_7bab2")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -688.0
offset_top = 975.0
offset_right = -518.0
offset_bottom = 1055.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_g2g7d")
text = "Level 1"
level_data_copy = ExtResource("6_m0bv4")

[node name="LvlButton2" parent="." instance=ExtResource("1_7bab2")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -475.0
offset_top = 879.0
offset_right = -305.0
offset_bottom = 959.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_g2g7d")
text = "Level 2"
level_data_copy = ExtResource("6_382rl")

[node name="LvlButton3" parent="." instance=ExtResource("1_7bab2")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -423.0
offset_top = 731.0
offset_right = -253.0
offset_bottom = 811.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_g2g7d")
text = "Level 3"
level_data_copy = ExtResource("7_ctgmg")

[node name="LvlButton4" parent="." instance=ExtResource("1_7bab2")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -187.0
offset_top = 650.0
offset_right = -17.0
offset_bottom = 730.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_g2g7d")
text = "Level 4
"
level_data_copy = ExtResource("8_w5g2m")

[node name="LvlButton5" parent="." instance=ExtResource("1_7bab2")]
layout_mode = 0
offset_left = 732.0
offset_top = 530.0
offset_right = 902.0
offset_bottom = 610.0
theme_override_colors/font_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_g2g7d")
text = "Level 5
"
level_data_copy = ExtResource("9_cv6tf")

[node name="LvlButtonQuiz1" parent="." instance=ExtResource("1_7bab2")]
custom_minimum_size = Vector2(180, 80)
layout_mode = 0
offset_left = 854.0
offset_top = 395.0
offset_right = 1034.0
offset_bottom = 475.0
theme_override_colors/font_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_g2g7d")
text = "Quiz 1"
level_data_copy = ExtResource("10_8dvvn")

[node name="LvlButton6" parent="." instance=ExtResource("1_7bab2")]
layout_mode = 0
offset_left = 660.0
offset_top = 296.0
offset_right = 830.0
offset_bottom = 376.0
theme_override_colors/font_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_g2g7d")
text = "Level 6
"
level_data_copy = ExtResource("11_c1xo7")

[node name="LvlButton7" parent="." instance=ExtResource("1_7bab2")]
layout_mode = 0
offset_left = 836.0
offset_top = 179.0
offset_right = 1006.0
offset_bottom = 259.0
theme_override_colors/font_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_g2g7d")
text = "Level 7
"
level_data_copy = ExtResource("12_rjv15")

[node name="LvlButton8" parent="." instance=ExtResource("1_7bab2")]
layout_mode = 0
offset_left = 1068.0
offset_top = 240.0
offset_right = 1238.0
offset_bottom = 320.0
theme_override_colors/font_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_g2g7d")
text = "Level 8
"
level_data_copy = ExtResource("13_iarii")

[node name="LvlButton9" parent="." instance=ExtResource("1_7bab2")]
layout_mode = 0
offset_left = 1298.0
offset_top = 200.0
offset_right = 1468.0
offset_bottom = 280.0
theme_override_colors/font_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_g2g7d")
text = "Level 9
"
level_data_copy = ExtResource("14_7hl0h")

[node name="LvlButton10" parent="." instance=ExtResource("1_7bab2")]
layout_mode = 0
offset_left = 1470.0
offset_top = 310.0
offset_right = 1640.0
offset_bottom = 390.0
theme_override_colors/font_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_g2g7d")
text = "Level 10
"
level_data_copy = ExtResource("15_f4usa")

[node name="LvlButtonQuiz2" parent="." instance=ExtResource("1_7bab2")]
custom_minimum_size = Vector2(0, 80)
layout_mode = 0
offset_left = 1647.0
offset_top = 204.0
offset_right = 1827.0
offset_bottom = 284.0
theme_override_colors/font_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_g2g7d")
text = "Quiz 2
"
level_data_copy = ExtResource("16_hcrs4")

[node name="LevelInfo" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -725.0
offset_top = -409.0
offset_right = -84.0
offset_bottom = -36.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bcj4l")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelInfo"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -249.5
offset_right = 250.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9984, 1.01879)
theme_override_constants/separation = 20
alignment = 1

[node name="LevelTitle" type="Label" parent="LevelInfo/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Level 1 : Advanced Conditionals"
label_settings = SubResource("LabelSettings_mwkfy")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Spacer" type="Control" parent="LevelInfo/VBoxContainer"]
layout_mode = 2

[node name="Objective" type="Label" parent="LevelInfo/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Learning Objective : Sequencing commands in Python."
label_settings = SubResource("LabelSettings_2f70u")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SkillsPracticed" type="Label" parent="LevelInfo/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Skills Practiced : Using loops, decision-making"
label_settings = SubResource("LabelSettings_2f70u")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Spacer2" type="Control" parent="LevelInfo/VBoxContainer"]
layout_mode = 2

[node name="ReplayButton" type="Button" parent="LevelInfo/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(190, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.237539, 0.237539, 0.237539, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_j4ee4")
text = "Replay_Level()"

[node name="PlayButton" type="Button" parent="LevelInfo/VBoxContainer"]
custom_minimum_size = Vector2(170, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.237539, 0.237539, 0.237539, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_j4ee4")
text = "Play_Level()"

[node name="Checkbox" type="Panel" parent="LevelInfo"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 68.0
offset_bottom = 65.0
theme_override_styles/panel = SubResource("StyleBoxFlat_30mif")

[node name="Checkmark" type="TextureRect" parent="LevelInfo/Checkbox"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 4.0
offset_top = -10.0
offset_right = 64.0
offset_bottom = 50.0
texture = ExtResource("16_54i8j")
expand_mode = 1

[node name="ScoreStatsContainer" type="Panel" parent="LevelInfo"]
custom_minimum_size = Vector2(100, 120)
layout_mode = 1
offset_left = 20.0
offset_top = -130.0
offset_right = 120.0
offset_bottom = -10.0
theme_override_styles/panel = SubResource("StyleBoxFlat_x406s")

[node name="Score" type="Label" parent="LevelInfo/ScoreStatsContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_right = 41.0
offset_bottom = 74.0
grow_horizontal = 2
text = "100"
label_settings = SubResource("LabelSettings_ar8ft")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="LevelInfo/ScoreStatsContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -47.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_kj75t")
text = "Score"
label_settings = SubResource("LabelSettings_0hrcb")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MistakesStatsContainer" type="Panel" parent="LevelInfo"]
custom_minimum_size = Vector2(100, 120)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = -130.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_x406s")

[node name="Mistakes" type="Label" parent="LevelInfo/MistakesStatsContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_right = 41.0
offset_bottom = 74.0
grow_horizontal = 2
text = "4
"
label_settings = SubResource("LabelSettings_ar8ft")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="LevelInfo/MistakesStatsContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -47.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_kj75t")
text = "Mistakes
"
label_settings = SubResource("LabelSettings_f1x4p")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GameProgress" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 630)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -315.0
offset_right = 150.0
offset_bottom = 315.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xybiv")

[node name="HBoxContainer" type="VBoxContainer" parent="GameProgress"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_right = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="LevelStatsContainer" type="Panel" parent="GameProgress/HBoxContainer"]
custom_minimum_size = Vector2(100, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_14ui8")

[node name="ProgressCircle" type="ColorRect" parent="GameProgress/HBoxContainer/LevelStatsContainer"]
material = SubResource("ShaderMaterial_hvhmv")
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.0
offset_top = 5.0
offset_right = 35.0
offset_bottom = 75.0
grow_horizontal = 2
color = Color(0.660328, 0.673245, 0.960767, 1)

[node name="LevelsFinished" type="Label" parent="GameProgress/HBoxContainer/LevelStatsContainer/ProgressCircle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -21.5
offset_right = 41.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
text = "2/7"
label_settings = SubResource("LabelSettings_2jtue")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="GameProgress/HBoxContainer/LevelStatsContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -45.0
grow_horizontal = 2
grow_vertical = 0
text = "Finished Levels"
label_settings = SubResource("LabelSettings_54in2")
horizontal_alignment = 1
autowrap_mode = 2

[node name="MistakesStatsContainer" type="Panel" parent="GameProgress/HBoxContainer"]
custom_minimum_size = Vector2(100, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_14ui8")

[node name="Mistakes" type="Label" parent="GameProgress/HBoxContainer/MistakesStatsContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 77.0
grow_horizontal = 2
text = "100"
label_settings = SubResource("LabelSettings_waw1k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="GameProgress/HBoxContainer/MistakesStatsContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -46.0
grow_horizontal = 2
grow_vertical = 0
text = "Average Mistakes"
label_settings = SubResource("LabelSettings_54in2")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Quiz1StatsContainer" type="Panel" parent="GameProgress/HBoxContainer"]
custom_minimum_size = Vector2(100, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_14ui8")

[node name="Checkbox" type="Panel" parent="GameProgress/HBoxContainer/Quiz1StatsContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = 15.0
offset_right = 25.0
offset_bottom = 65.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_30mif")

[node name="Checkmark" type="TextureRect" parent="GameProgress/HBoxContainer/Quiz1StatsContainer/Checkbox"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 4.0
offset_top = -10.0
offset_right = 64.0
offset_bottom = 50.0
texture = ExtResource("16_54i8j")
expand_mode = 1

[node name="Label" type="Label" parent="GameProgress/HBoxContainer/Quiz1StatsContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -44.0
grow_horizontal = 2
grow_vertical = 0
text = "Quiz 1"
label_settings = SubResource("LabelSettings_42tr1")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Quiz2StatsContainer" type="Panel" parent="GameProgress/HBoxContainer"]
custom_minimum_size = Vector2(100, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_14ui8")

[node name="Checkbox" type="Panel" parent="GameProgress/HBoxContainer/Quiz2StatsContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = 15.0
offset_right = 25.0
offset_bottom = 65.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_30mif")

[node name="Checkmark" type="TextureRect" parent="GameProgress/HBoxContainer/Quiz2StatsContainer/Checkbox"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 4.0
offset_top = -10.0
offset_right = 64.0
offset_bottom = 50.0
texture = ExtResource("16_54i8j")
expand_mode = 1

[node name="Label" type="Label" parent="GameProgress/HBoxContainer/Quiz2StatsContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -44.0
grow_horizontal = 2
grow_vertical = 0
text = "Quiz 2"
label_settings = SubResource("LabelSettings_42tr1")
horizontal_alignment = 1
autowrap_mode = 2

[node name="ReturnButton" type="Button" parent="."]
custom_minimum_size = Vector2(220, 60)
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 260.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("1_k6vei")
theme_override_font_sizes/font_size = 32
text = "Return()"

[connection signal="pressed" from="LevelInfo/VBoxContainer/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="LevelInfo/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
